   * The widget in a stacked widget now grows properly
   * Merged code for FDO and KDE desktop notification; only dbus is needed
   * Added --screenshot parameter to take map screenshots without
     initializing a GUI.
   * Added --new-uploader parameter for testing the new experimental log
     uploader.
   * Fix gcc 4.4 compilation errors (Debian bug #539546)

Version 1.7.2:
 * Campaigns:
   * Son of the Black Eye
     * changed Orcish Shaman movetype from smallfoot to orcishfoot
 * Graphics:
    * New portrait for male and female Footpad, male and female Outlaw,
      Horseman, Drake Clasher, Goblin Wolf Rider, Goblin Pillager, Dwarf 
      Explorer, Dwarf Scout, Cavalryman, Skeleton.
    * New unit graphics and animations for the Dwarvish Scout, Pathfinder,
      and Explorer; Drake Clasher, Slasher, Warden, Gladiator, Enforcer.
 * Language and i18n:
   * Updated translations: Czech, Dutch, Estonian, Finnish, French, German,
     Italian, Lithuanian, Polish, Russian, Serbian, Slovak
 * Terrains:
   * New terrain: drake village
 * User interface:
   * Add an icon to show whether or not the user finished a campaign
   * Fixed bug #13831: Bug with team labels
   * Added a new experimental stacked widget widget
   * Added support for Growl notifications
   * Added support for desktop notifications using KDE's
     org.kde.VisualNotifications DBus service
   * Changed "Toggle Full Screen" button to say "Full Screen" (bug #13909)
   * Added cost of units recruited, recalled, killed, and lost, to the
     statistics window (patch #1190)
   * Fixed bug #13626: Bug about no option to turn on/off save delete
     confimation. (patch #1192)
   * Allow [advanced_preference]s to be of the 'int' type, appearing as a
     slider
   * Add better configurable linked widgets in the new gui
   * Allow to make items in a listbox invisible (needed for filtering)
   * Initial new loby user interface, available for testing with --new-widgets   
 * Miscellaneous and bugfixes: