@@ -66,6 +66,7 @@ Version 1.7.2+svn:
    * Added --new-uploader parameter for testing the new experimental log
      uploader.
    * Fix gcc 4.4 compilation errors (Debian bug #539546)
+   * Added a work-around a listbox assertion failure in the new MP lobby
 
 Version 1.7.2:
  * Campaigns:
